tests/ide_unmerged_deps_dependents/ide_unmerged_deps_dependents.exp
==== No errors at start====
No errors!

The Flow server is currently in lazy mode and is only checking 0/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

==== Checking file.js finds errors ====
Error ------------------------------------------------------------------------------------------------------ file.js:5:2

Cannot cast `x` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   file.js:5:2
   5| (x: number); // error
       ^

References:
   dependency.js:3:18
   3| export const x = 'x';
                       ^^^ [1]
   file.js:5:5
   5| (x: number); // error
          ^^^^^^ [2]



Found 1 error

========Skipping stats========
Merge skipped 0 of 3 modules
Check will skip 0 of 3 files

==== force-recheck checks dependent ====
Error ------------------------------------------------------------------------------------------------- dependent.js:5:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   dependent.js:5:2
   5| (123: string); // error
       ^^^ [1]

References:
   dependent.js:5:7
   5| (123: string); // error
            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ file.js:5:2

Cannot cast `x` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   file.js:5:2
   5| (x: number); // error
       ^

References:
   dependency.js:3:18
   3| export const x = 'x';
                       ^^^ [1]
   file.js:5:5
   5| (x: number); // error
          ^^^^^^ [2]



Found 2 errors

The Flow server is currently in lazy mode and is only checking 3/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

========Skipping stats========
Merge skipped 0 of 0 modules
Check will skip 0 of 0 files
